syntax = "proto3";

option go_package = "/proto";

service HelloService {
	rpc SayHello(HelloRequest) returns (HelloResponse);

	// bidirectional stream
	rpc SubscribeHello(stream HelloRequest) returns(stream HelloResponse);
}

message HelloRequest {
	string greeting = 1;
}

message HelloResponse {
	string reply = 1;
}
